objects/Quote/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <formula>IF(BillingStreet &lt;&gt; &apos;&apos; || BillingCity &lt;&gt; &apos;&apos; || BillingState &lt;&gt; &apos;&apos; || BillingPostalCode &lt;&gt; &apos;&apos; || BillingCountry &lt;&gt; &apos;&apos; ,
IF( Alternative_Invoice_Company_Name__c &lt;&gt; &apos;&apos;, Alternative_Invoice_Company_Name__c &amp; BR() , &apos;&apos;) &amp;
IF(BillingStreet &lt;&gt; &apos;&apos;, BillingStreet &amp; BR() , &apos;&apos;) &amp;
IF(BillingCity&lt;&gt; &apos;&apos;, BillingCity &amp; BR() , &apos;&apos;) &amp;
IF(BillingState &lt;&gt; &apos;&apos;, BillingState&amp; BR() , &apos;&apos;) &amp;
IF(BillingPostalCode&lt;&gt; &apos;&apos;, BillingPostalCode &amp; BR() , &apos;&apos;) &amp;
IF(BillingCountry &lt;&gt; &apos;&apos;, BillingCountry &amp; BR() , &apos;&apos;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To</label>
    <type>Text</type>
</CustomField>