objects/Quote/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <label>Created By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chester Boyt</fullName>
            </value>
            <value>
                <fullName>Lyudmila Lopez</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>