objects/Quote/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <formula>IF(TEXT(Opportunity.Account.Customer_Status__c )!=null,TEXT(Opportunity.Account.Customer_Status__c ),TEXT(Opportunity.Account.Parent.Customer_Status__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Status</label>
    <type>Text</type>
</CustomField>