objects/Quote/fields/Despatch_Method__c.field-meta.xml
<CustomField>
    <fullName>Despatch_Method__c</fullName>
    <label>Despatch Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineer Installation</fullName>
                <default>true</default>
                <label>Engineer Installation</label>
            </value>
            <value>
                <fullName>Delivery By Hand</fullName>
            </value>
            <value>
                <fullName>TNT Courier</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>