objects/Quote/fields/Engineer_Signature__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Signature__c</fullName>
    <label>Engineer Signature</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>