objects/Quote/fields/Increase_Version__c.field-meta.xml
<CustomField>
    <fullName>Increase_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Increase Version</label>
    <type>Checkbox</type>
</CustomField>