objects/Quote/fields/Job_Scale__c.field-meta.xml
<CustomField>
    <fullName>Job_Scale__c</fullName>
    <label>Time Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Non Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>