objects/Quote/fields/Print__c.field-meta.xml
<CustomField>
    <fullName>Print__c</fullName>
    <label>Print</label>
    <length>255</length>
    <type>Text</type>
</CustomField>