objects/Quote/fields/Quote_Total__c.field-meta.xml
<CustomField>
    <fullName>Quote_Total__c</fullName>
    <formula>(TotalPrice  +  Vat_Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Including VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>