objects/Quote/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>