objects/Quote/fields/Sign__c.field-meta.xml
<CustomField>
    <fullName>Sign__c</fullName>
    <label>Sign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>