objects/Quote/fields/terms__c.field-meta.xml
<CustomField>
    <fullName>terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAYMENT DUE ON PRESENTATION OF INVOICE</fullName>
            </value>
            <value>
                <fullName>Other – see special terms</fullName>
            </value>
            <value>
                <fullName>30% with order, 60% 7 days before installation and 10% balance on completion of installation</fullName>
            </value>
            <value>
                <fullName>30 days from End of Month</fullName>
            </value>
            <value>
                <fullName>50% with order, 50% on delivery</fullName>
            </value>
            <value>
                <fullName>Payable by monthly standing order</fullName>
            </value>
            <value>
                <fullName>Proforma</fullName>
            </value>
            <value>
                <fullName>PAYMENT RECEIVED</fullName>
            </value>
            <value>
                <fullName>Payment On Installation</fullName>
            </value>
            <value>
                <fullName>On Account</fullName>
            </value>
            <value>
                <fullName>60 days</fullName>
            </value>
            <value>
                <fullName>50% with order, 50% on installation</fullName>
            </value>
            <value>
                <fullName>30 days from Invoice Date</fullName>
            </value>
            <value>
                <fullName>30% with order, weekly progress payments for the duration of the project, 10% balance due at project hand over</fullName>
            </value>
            <value>
                <fullName>30% with order, 60% on first day of installation and 10% balance on completion</fullName>
            </value>
            <value>
                <fullName>30% deposit with order, balance due within 30 days of Invoice</fullName>
            </value>
            <value>
                <fullName>30% deposit with order, balance due on day of installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>