objects/Quote/fields/Vat_Total__c.field-meta.xml
<CustomField>
    <fullName>Vat_Total__c</fullName>
    <formula>(TotalPrice * VAT_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vat Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>