objects/Quote/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Version Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>