objects/Quote/fields/Your_Ref__c.field-meta.xml
<CustomField>
    <fullName>Your_Ref__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Your Ref</label>
    <type>Text</type>
</CustomField>