objects/Quote/recordTypes/Basic_Proposal.recordType-meta.xml
<RecordType>
    <fullName>Basic_Proposal</fullName>
    <active>true</active>
    <label>Equipment Proposal</label>
</RecordType>