objects/Quote/recordTypes/Long_Project_Proposal.recordType-meta.xml
<RecordType>
    <fullName>Long_Project_Proposal</fullName>
    <active>true</active>
    <label>Project Proposal</label>
</RecordType>