objects/Quote/recordTypes/Service_Proposal.recordType-meta.xml
<RecordType>
    <fullName>Service_Proposal</fullName>
    <active>true</active>
    <label>Service Proposal</label>
</RecordType>