objects/Quote/recordTypes/Short_Project_Proposal.recordType-meta.xml
<RecordType>
    <fullName>Short_Project_Proposal</fullName>
    <active>true</active>
    <label>Short Project Proposal</label>
</RecordType>